Atualização do frontend

--- a/meu-primeiro-app-vue/.firebaserc
+++ b/meu-primeiro-app-vue/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
-    "default": "appestacoes"
+    "default": "revalida-companion",
+    "revalidafacil": "revalida-companion"
   },
   "targets": {
     "appestacoes": {
