--- a/meu-primeiro-app-vue/.env.production
+++ b/meu-primeiro-app-vue/.env.production
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL=https://revalidafacil-backend-160232798179.southamerica-east1.run.app
+VITE_BACKEND_URL=https://revalida-backend--revalida-companion.us-central1.hosted.app
